WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183238
[Curl] Linker errors in some curl files due to missing exports
https://bugs.webkit.org/show_bug.cgi?id=183238
Summary
[Curl] Linker errors in some curl files due to missing exports
Christopher Reid
Reported
2018-02-28 18:44:49 PST
19>Link : error : L0039: reference to undefined symbol `WebCore::CurlProxySettings::operator= (WebCore::CurlProxySettings const&)' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebProcessPool.o" 19>Link : error : L0039: reference to undefined symbol `WebCore::CurlContext::singleton()' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\NetworkDataTaskCurl.o" 19>Link : error : L0039: reference to undefined symbol `WebCore::CurlProxySettings::setUserPass(WTF::String const&, WTF::String const&)' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\NetworkDataTaskCurl.o" 19>Link : error : L0039: reference to undefined symbol `WebCore::CurlProxySettings::isolatedCopy() const' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\NetworkProcessCurl.o" 19>Link : error : L0039: reference to undefined symbol `WebCore::CurlProxySettings::CurlProxySettings(WebCore::CurlProxySettings::Mode)' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCoreArgumentCodersCurl.o" 19>Link : error : L0039: reference to undefined symbol `WebCore::CurlProxySettings::CurlProxySettings(WebCore::URL const&, WTF::String)' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCoreArgumentCodersCurl.o" 19>Link : error : L0039: reference to undefined symbol `WebCore::CookieJarDB::CookieJarDB(WTF::String const&)' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCookieManagerCurl.o" 19>Link : error : L0039: reference to undefined symbol `WebCore::CookieJarDB::~CookieJarDB()' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCookieManagerCurl.o" 19>Link : error : L0039: reference to undefined symbol `WebCore::NetworkStorageSession::setCookieDatabase(WTF::UniqueRef<WebCore::CookieJarDB>&&) const' in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCookieManagerCurl.o"
Attachments
Patch
(2.36 KB, patch)
2018-02-28 19:00 PST
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Christopher Reid
Comment 1
2018-02-28 19:00:22 PST
Created
attachment 334794
[details]
Patch
Christopher Reid
Comment 2
2018-02-28 19:06:29 PST
(In reply to Christopher Reid from
comment #0
)
> 19>Link : error : L0039: reference to undefined symbol > `WebCore::CurlProxySettings::operator= (WebCore::CurlProxySettings const&)' > in file "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebProcessPool.o" > 19>Link : error : L0039: reference to undefined symbol > `WebCore::CurlContext::singleton()' in file > "WebKitBuild\Source\WebKit\WebKit.dir\Debug\NetworkDataTaskCurl.o" > 19>Link : error : L0039: reference to undefined symbol > `WebCore::CurlProxySettings::setUserPass(WTF::String const&, WTF::String > const&)' in file > "WebKitBuild\Source\WebKit\WebKit.dir\Debug\NetworkDataTaskCurl.o" > 19>Link : error : L0039: reference to undefined symbol > `WebCore::CurlProxySettings::isolatedCopy() const' in file > "WebKitBuild\Source\WebKit\WebKit.dir\Debug\NetworkProcessCurl.o" > 19>Link : error : L0039: reference to undefined symbol > `WebCore::CurlProxySettings::CurlProxySettings(WebCore::CurlProxySettings:: > Mode)' in file > "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCoreArgumentCodersCurl.o" > 19>Link : error : L0039: reference to undefined symbol > `WebCore::CurlProxySettings::CurlProxySettings(WebCore::URL const&, > WTF::String)' in file > "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCoreArgumentCodersCurl.o" > 19>Link : error : L0039: reference to undefined symbol > `WebCore::CookieJarDB::CookieJarDB(WTF::String const&)' in file > "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCookieManagerCurl.o" > 19>Link : error : L0039: reference to undefined symbol > `WebCore::CookieJarDB::~CookieJarDB()' in file > "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCookieManagerCurl.o" > 19>Link : error : L0039: reference to undefined symbol > `WebCore::NetworkStorageSession::setCookieDatabase(WTF::UniqueRef<WebCore:: > CookieJarDB>&&) const' in file > "WebKitBuild\Source\WebKit\WebKit.dir\Debug\WebCookieManagerCurl.o"
I was mistaken about the CurlProxySettings errors, they don't apply to trunk. All the other errors occur.
WebKit Commit Bot
Comment 3
2018-03-01 08:59:48 PST
Comment on
attachment 334794
[details]
Patch Clearing flags on attachment: 334794 Committed
r229132
: <
https://trac.webkit.org/changeset/229132
>
WebKit Commit Bot
Comment 4
2018-03-01 08:59:49 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-03-01 09:00:45 PST
<
rdar://problem/38028715
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug