[Curl] Linker errors in some curl files due to missing exports https://bugs.webkit.org/show_bug.cgi?id=183238

Patch by Christopher Reid <chris.reid@sony.com> on 2018-03-01
Reviewed by Alex Christensen.

No new tests, no change in behavior.

Adding WEBCORE_EXPORT to functions now used in WebKit.

* platform/network/NetworkStorageSession.h:
* platform/network/curl/CookieJarDB.h:
* platform/network/curl/CurlContext.h:

Canonical link: https://commits.webkit.org/198923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229132 268f45cc-cd09-0410-ab3c-d52691b4dbfc